2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add table.update_values() and table.combine().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Fix issues/breakage in the previous commit.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add table and iter helpers. Move table.copy() to the table helpers.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add naivetree algorithm.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add Edge:getOption(), Edge:setOption() and Edge:mergeOptions().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Use resolvers instead of the kpse library. Add missing vector file
	entry.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- Add spring and wetherelltree algorithms and the Vector class.

2011-04-30  Christian Feuersaenger <ludewich@users.sourceforge.net>

	- number printing: added '1000 sep in fractionals' switch

2011-04-29 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Work on pgflibraryluamath (added pgfpointnormalised)

2011-04-27 Matthias Schulz <ma.schulz@email.de>

	- Graphdrawing library documentation, split into two files, removed
	noluatex file, reworked the text (added information).

2011-04-25 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- First attempt to do math with lua (very basical): pgflibraryluamath

2011-04-18  Christian Feuersaenger <ludewich@users.sourceforge.net>

	- bugfix for rounding error in \pgfmathdivide{83.407811000}{16.68156400}
	was 4.10, is now 5.0: it could happen in rare cases that digits where 
	appended where they shouldhave been than added (4 + .10 instead of 4 + 1.0)

2011-04-22 Jannis Pohlmann <jannis@xfce.org>

	- Implemented a G_n subgraph for creating grid (or: mesh) graphs.
	This also introduces a new key /tikz/graphs/wrap after=<number> that
	configures how the nodes in such a grid graph are connected. Some of
	the common subgraph keys such as /tikz/graphs/V and /tikz/graphs/n 
	can be used with G_n subgraphs as well.