@@ -1,0 +1,9 @@
+Lua coding style for the graphdrawing library
+=============================================
+
+* 2 spaces indentation
+* variable_names_with_underscores
+* namespaced.low_level_functions_with_underscores(foo, bar)
+* CamelCaseClassNames
+* CamelCaseClass:functionNamesLikeThis(foo, bar)
+* use the 'local' scope modifier where possible
