@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add CODING_STYLE document. Refactor spring algorithm.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add table.update_values() and table.combine().
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
